[project]
name = "delta-visualizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.0.0",
    "marimo>=0.19.9",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
]

[tool.marimo.runtime]
pythonpath = ["./helper", "./helper/plotting"]
